--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,53 @@
-.App {
-  text-align: center;
+body{
+    background-color: aquamarine;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.input-container {
+    width: 1100px;
+    padding:30px 30px;
+    border-radius: 10px;
+    margin: 20px auto;
+    background-color: beige;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input-container label {
+    margin-right: 20px;
+    font-size: 22px;
+    font-weight: bold; 
 }
 
-.App-link {
-  color: #61dafb;
+.users-container {
+    background-color: antiquewhite;
+    border-radius: 10px;
+    padding:30px 30px;
+    width: 1100px;
+    margin:auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.users-image{
+    height: 200px;
+    width: 200px;
+    background-size: cover;
+}
+
+.user-container{
+    border:1px solid black;
+    text-align: center;
+    padding: 10px;
+}
+
+
+* {
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+
+.user-title, .user-gender, .user-phone {
+    margin: 10px;
 }
